fixed overflowing border(hopefully)

--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@
   width: 300px;
   height: 100px;
   padding: 50px;
-  margin: 7px;
+  margin: 57px;
 }
 
 #titleheader {
